[gd_scene load_steps=6 format=3 uid="uid://bxm1m8fjlxgxa"]

[ext_resource type="Script" path="res://scripts/Level_Selector.gd" id="1_5qpor"]
[ext_resource type="Texture2D" uid="uid://swbc3mcn8sc0" path="res://ressources/images/map.png" id="2_0lrj6"]
[ext_resource type="Texture2D" uid="uid://beadycs5mvhmr" path="res://ressources/images/map_marker_green.png" id="2_i0x85"]
[ext_resource type="Texture2D" uid="uid://cww727pxyt6e" path="res://ressources/images/map_marker.png" id="3_kcvkr"]
[ext_resource type="Script" path="res://scripts/LevelButton.gd" id="5_ot1br"]

[node name="Level_Selector" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5qpor")
completed_texture = ExtResource("2_i0x85")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Map" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 638.0
offset_bottom = 364.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
texture = ExtResource("2_0lrj6")
expand_mode = 2
stretch_mode = 6

[node name="Level1" type="TextureButton" parent="Map"]
layout_mode = 1
offset_left = 922.0
offset_top = 680.0
offset_right = 1048.0
offset_bottom = 801.0
texture_normal = ExtResource("3_kcvkr")
ignore_texture_size = true
stretch_mode = 5
script = ExtResource("5_ot1br")

[node name="Level2" type="TextureButton" parent="Map"]
layout_mode = 1
offset_left = 1219.0
offset_top = 317.0
offset_right = 1345.0
offset_bottom = 443.0
texture_normal = ExtResource("3_kcvkr")
ignore_texture_size = true
stretch_mode = 5
script = ExtResource("5_ot1br")

[node name="Level3" type="TextureButton" parent="Map"]
layout_mode = 1
offset_left = 1037.0
offset_top = 399.0
offset_right = 1163.0
offset_bottom = 525.0
texture_normal = ExtResource("3_kcvkr")
ignore_texture_size = true
stretch_mode = 5
script = ExtResource("5_ot1br")

[node name="Level4" type="TextureButton" parent="Map"]
layout_mode = 1
offset_left = 896.0
offset_top = 366.0
offset_right = 1022.0
offset_bottom = 492.0
texture_normal = ExtResource("3_kcvkr")
ignore_texture_size = true
stretch_mode = 5
script = ExtResource("5_ot1br")

[connection signal="pressed" from="Map/Level1" to="." method="_on_level_1_pressed"]
[connection signal="pressed" from="Map/Level2" to="." method="_on_level_2_pressed"]
[connection signal="pressed" from="Map/Level3" to="." method="_on_level_3_pressed"]
[connection signal="pressed" from="Map/Level4" to="." method="_on_level_4_pressed"]
